# meal_planner

./: README.md  main.py  pyproject.toml
ai_meal_planner/: .gitignore  README.md  pyproject.toml
ai_meal_planner/knowledge/: user_preference.txt
ai_meal_planner/outputs/: final_output.md  grocery_list.md  meal_plan.md  nutritional_label.md
ai_meal_planner/src/ai_meal_planner/: crew.py  main.py
ai_meal_planner/src/ai_meal_planner/config/: agents.yaml  tasks.yaml
