[project]
name = "ai_meal_planner"
version = "0.1.0"
description = "ai_meal_planner using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.1.0"
]

[project.scripts]
ai_meal_planner = "ai_meal_planner.main:run"
run_crew = "ai_meal_planner.main:run"
train = "ai_meal_planner.main:train"
replay = "ai_meal_planner.main:replay"
test = "ai_meal_planner.main:test"
run_with_trigger = "ai_meal_planner.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
